--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,28 @@ edition = "2018"
 
 [dependencies]
 bootloader = "0.9.8"
+volatile = "0.2.6"
+lazy_static = { version = "1.0", features = ["spin_no_std"] }
+spin = "0.5.2"
+x86_64 = "0.14.2"
+uart_16550 = "0.2.0"
 
-[profile.dev]
-panic = "abort"
+# [profile.dev]
+# panic = "abort"
 
-[profile.release]
-panic = "abort"
+# [profile.release]
+# panic = "abort"
+
+[package.metadata.bootimage]
+run-command = [
+  "qemu-system-x86_64", "-L", "/Applications/UTM.app/Contents/Resources/qemu", "-drive", "format=raw,file={}"
+]
+test-args = [
+  "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"
+]
+test-success-exit-code = 33
+test-timeout = 300
+
+[[test]]
+name = "should_panic"
+harness = false
